--- a/frontend/src/components/Home/MainSection/CreateFeed/CreateFeed.css
+++ b/frontend/src/components/Home/MainSection/CreateFeed/CreateFeed.css
@@ -10,8 +10,25 @@
     background-color: white;
     border: 1px solid #eee;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    transition: all 0.3s;
+
 }
 
+.Dark{
+    background-color: #1E2021;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    border:none;
+}
+
+.Dark .IconColor{
+    color: white;
+    border-color: white;
+}
+
+.IconColor{
+    color: grey;
+    border-color: #eee;
+}
 .Type{
     display: flex;
     flex-direction: row;
@@ -29,11 +46,10 @@
     height: 35px;
     outline: none;
     border: none;
-    background-color: #F3F3F3;
+    background-color: transparent;
     word-break: break-all;
     min-width: 90%;
     min-height: 50px;
-    background-color: white;
     font-family: inherit;
     font-weight: 500;
     word-break: normal;
