--- a/frontend/src/components/Home/RightPanel/Activity/Activity.css
+++ b/frontend/src/components/Home/RightPanel/Activity/Activity.css
@@ -1,7 +1,6 @@
 .Activity{
     padding: 20px;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    background-color: inherit;
     width:100%;
     box-sizing: border-box;
     height: 100vh;
