--- a/frontend/src/containers/Home/Chat/chatIn.css
+++ b/frontend/src/containers/Home/Chat/chatIn.css
@@ -1,53 +1,60 @@
 .chat{
     flex: 0.65;
-    padding:10px;
+    /* padding:10px; */
     display: inline-block;
     /* box-sizing: border-box; */
     /* flex-direction: column-reverse; */
     position: fixed;
-    top: 75%;
+    width: 450px;
+    min-height:100nv;
+    height: 600px;
+    top: 80px;
     right: 0;
-    background-color: #fff;
+    background-color:lightgrey;
+    z-index: 300;
 }
 
 .chat_header{
+    width: 100%;
+    height: 80px;
     padding:20px;
-    /* display:flex; */
+    margin: 0;
+    display:flex;
     align-items:center;
-    border-bottom: 1px solid lightgray;
+    background-color: lightgray;
+    border-bottom: 1px solid black;
 }
 
 .chat_headerInfo{
     flex:1;
     padding-left: 20px;
 }
-.chat_headerInfor >h3{
+.chat_headerInfo >h3{
     margin-bottom: 3px;
     font-weight: 500;
 }
-.chat_headerInfor >p{
+.chat_headerInfo >p{
     color: gray;
 }
 .chat_headerRight{
-    /* display: flex; */
+    display: flex;
     justify-content: space-between;
     min-width: 100px;
+    right: 0;
 }
 
 .chat_body{
-   flex:1;
-   background-color:white;
+   /* flex:1; */
+   display: flex;
+   margin: auto;
+   background-color:rgb(243, 242, 242);
    background-repeat: repeat;
    background-position: center;
    padding:30px;
-   overflow:scroll;
+   height: 420px;
+   overflow-y: hidden;
 }
-.chat_name{
-  position: absolute;
-  top: -15px;
-  font-weight: 800;
-  font-size: xx-small;
-}
+
 .chat_timestamp{
     margin-left: 10px;
     font-size: xx-small;
@@ -59,9 +66,13 @@
     padding: 10px;
     border-radius: 10px;
     width: fit-content;
-    background-color: #ffffff;
+    height: fit-content;
+    background-color: rgb(173, 180, 179);
     margin-bottom: 30px;
+    font-size: x-small;
+    color: black;
 }
+
 .chat_receiver{
     margin: auto;
     background-color: #dcf8c6;
@@ -69,15 +80,16 @@
 
 .chat_footer{
     display: flex;
+    margin: auto;
+    background-color:lightgrey;
     justify-content: space-between;
     align-items: center;
-    height: 62px;
-    border-top: 1px solid lightgray;
+    padding: 30px;
+    height: 80px;
 }
 .chat_footer > form{
     flex: 1;
     display: flex;
-    background-color:blue;
 }
 .chat_footer > form > input{
     flex: 1;
