--- a/src/containers/Home/Chat/MessageBox.css
+++ b/src/containers/Home/Chat/MessageBox.css
@@ -73,7 +73,7 @@
 .Input{
     display: flex;
     align-items: center;
-    height: 50px;
+    height: 70px;
 }
 .Comment{
     margin-left: 5px;
@@ -99,11 +99,13 @@
     .MessageBox{
         position: absolute;
         width: 100%;
+        height: 100%;
         right: -110%;
         top: 0;
         border-left: none;
         /* background-color: cadetblue; */
         z-index: 200;
+        margin: 0px;
     }
 
     .Show{
