--- a/src/containers/Home/Chat/MessageBox.css
+++ b/src/containers/Home/Chat/MessageBox.css
@@ -8,6 +8,7 @@
     border-left: 2px solid lightgray;
     overflow-x: clip;
     padding: 10px;
+    position: relative;
 }
 
 
@@ -29,22 +30,20 @@
 .Head > div{
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .Messages{
     flex-grow: 1;
     overflow-y: auto;
     padding: 0px 10px;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: flex-end; */
 }
 
 
 .MsgRow{
     display: flex;
     align-items: flex-start;
-    margin: 20px;
+    margin: 15px;
 }
 .MsgRow img{
     height: 40px;
@@ -158,10 +157,15 @@
     }
     .Msg{
         max-width: 80%;
+        padding: 15px 10px 10px 15px;
     }
 
     .Msg > p{
         font-size: 12px;
+    }
+
+    .MsgRow{
+        margin: 10px;
     }
 
     .MsgRow img{
@@ -201,6 +205,8 @@
     width: 100%;
     position: absolute;
     height: 5px;
+    top: 0;
+    left: 0;
     background: linear-gradient(to right,rgb(76,217,105),rgb(90,200,250),rgb(0,132,255),rgb(52,170,220),rgb(88,86,217),rgb(255,45,83));
     animation-name: loader-animation;
     animation-duration: 3s;
