--- a/src/containers/Home/Chat/Chat.css
+++ b/src/containers/Home/Chat/Chat.css
@@ -20,7 +20,9 @@
     overflow-y: auto;
     position: relative;
     padding: 10px;
+    overflow-x: clip;
 }
+
 
 .SearchInputBox{
     z-index: 200;
@@ -30,6 +32,7 @@
     top: 0;
     left: 0;
     display: flex;
+    align-items: center;
 }
 
 .Dark{
