--- a/src/containers/Home/Chat/Chat.css
+++ b/src/containers/Home/Chat/Chat.css
@@ -88,6 +88,7 @@
     border: none;
     border-bottom: 1px solid #4A2AD3;
     margin: 10px 0px;
+    color: black;
 }
 
 .AddGroupBox .Button{
@@ -107,6 +108,10 @@
 
 .Dark .AddGroupBox .Button{
     color: white;
+}
+
+.Dark .AddGroupBox input{
+    color: white !important;
 }
 
 
